solve problem 1 and 2

--- a/try.html
+++ b/try.html
@@ -199,7 +199,7 @@
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=yourkey&callback=initMap&libraries=places&v=weekly" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=places&v=weekly" async></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/directions/json?
     origin=place_id:ChIJXwTrzVJCzDERRm4Cg_hPd8I&destination=place_id:ChIJv_2iY_xNzDER0zttUT2j4jk
     &key=AIzaSyALoQuHQws1uow3VCluraRw97xWY3dqKnI"> -->
