solve problem 1 and 2 and 3

--- a/try.html
+++ b/try.html
@@ -65,7 +65,7 @@
         // This example requires the Places library. Include the libraries=places
         // parameter when you first load the API. For example:
         // <script
-        // src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALoQuHQws1uow3VCluraRw97xWY3dqKnI&libraries=places&callback=initMap">
+        // src="https://maps.googleapis.com/maps/api/js?key=apikey&libraries=places&callback=initMap">
         function initMap() {
             const map = new google.maps.Map(document.getElementById("map"), {
                 mapTypeControl: false,
@@ -202,7 +202,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=places&v=weekly" async></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/directions/json?
     origin=place_id:ChIJXwTrzVJCzDERRm4Cg_hPd8I&destination=place_id:ChIJv_2iY_xNzDER0zttUT2j4jk
-    &key=AIzaSyALoQuHQws1uow3VCluraRw97xWY3dqKnI"> -->
+    &key=apikey"> -->
     </script>
 </body>
 
