--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Google Maps - gmplot</title>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key=apikey"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key="></script>
     <script type="text/javascript">
         function initialize() {
             var map = new google.maps.Map(document.getElementById("map_canvas"), {
