--- a/try.html
+++ b/try.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Place Autocomplete and Directions</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default&key=AIzaSyALoQuHQws1uow3VCluraRw97xWY3dqKnI"></script>
     <style type="text/css">
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -199,7 +199,7 @@
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&libraries=places&v=weekly" async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALoQuHQws1uow3VCluraRw97xWY3dqKnI&callback=initMap&libraries=places&v=weekly" async></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/directions/json?
     origin=place_id:ChIJXwTrzVJCzDERRm4Cg_hPd8I&destination=place_id:ChIJv_2iY_xNzDER0zttUT2j4jk
     &key=apikey"> -->
